--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "serve": "json-server --watch db.json",
-    "serve:slow": "json-server --watch db.json --delay 1000",
+    "serve": "json-server --watch db.json --port $PORT",
+    "serve:slow": "json-server --watch db.json --delay 1000 --port $PORT",
     "seed": "node reseed-db.js",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
