--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "serve": "node server.js",
-    "serve:slow": "cross-env PORT=${PORT} json-server --host 0.0.0.0 --watch db.json --delay 1000 --port $PORT",
+    "serve:slow": "cross-env PORT=${PORT} json-server --watch db.json --delay 1000 --port $PORT",
     "seed": "node reseed-db.js",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -15,6 +15,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "@types/lodash-es": "^4.17.7",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "json-server": "^0.17.3",
     "lodash-es": "^4.17.21",
@@ -38,6 +39,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "typescript": "^5.0.2",
-    "vite": "^4.4.0"
+    "vite": "^6.3.2"
   }
 }
